<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DVR</string>
    <string name="recording_time">Recording Loop Cycle</string>
    <string name="minute1">1 Minute</string>
    <string name="minute3">3 Minute</string>
    <string name="minute5">5 Minute</string>
    <string name="minute10">10 Minute</string>
    <string name="recording_auto">Auto Recording</string>
    <string name="recording_backstage">Recording Backstage</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="saving_path">Saving Path</string>
    <string name="format_card">Format Card</string>
    <string name="prompt_format_card">Do you need to format the card ?</string>
    <string name="restore_default">Restore To Default</string>
    <string name="prompt_restore_default">Do you need to restore settings to default ?</string>
    <string name="photo_saved">Photo Saved</string>
    <string name="edit">Edit</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="no_file">No file found !</string>
    <string name="deleting">Deleting , </string>
    <string name="total">total </string>
    <string name="item_dot"> item .</string>
    <string name="delete_file">Delete file</string>
    <string name="total_first">Total </string>
    <string name="item"> item </string>
    <string name="will_be_deleted">will be deleted .</string>
    <string name="file_not_found">Can not find the file .</string>
    <string name="is_first_one">It is the first one .</string>
    <string name="is_last_one">It is the last one .</string>
    <string name="file_error">There is a error to play this file .</string>
    <string name="file_open_failure">Failure to open the file .</string>
    <string name="camera_not_found">Can not find any camera</string>
    <string name="card_not_exist">Card is invalid or not exist , please make sure path set is correct .</string>
    <string name="cannot_take_pic">Currently recording , can not take picture now .</string>
    <string name="cannot_recording">Currently recording , can not record video now .</string>
    <string name="cannot_formatting">Currently recording , can not formatting card now .</string>
    <string name="recording_fail">Recording failed</string>
    <string name="take_pic_fail">Take picture failed</string>
    <string name="formatting_fail">Formatting failed</string>
    <string name="auto_recording">DVR auto recording</string>
    <string name="sdcard1">sdcard1</string>
    <string name="sdcard2">sdcard2</string>
    <string name="usb">usb</string>
    <string name="front_left">Front left</string>
    <string name="front_right">Front Right</string>
    <string name="rear_left">Rear Left</string>
    <string name="rear_right">Rear Right</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="channel1">Channel 1</string>
    <string name="channel2">Channel 2</string>
    <string name="channel3">Channel 3</string>
    <string name="channel4">Channel 4</string>
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="ch4">CH4</string>
    <string name="channel_select">Channel Select</string>
    <string name="checking">The video signal is being detected...</string>
    <string name="checked">No video signal!</string>
    <string name="no_signal">No Signal</string>

    <string name="menu_settings">Settings</string>
    <string name="dialog_title">prompt</string>
    <string name="button_ok">Determine</string>
    <string name="button_cancel">Cancel</string>
    <string name="prompt_stop_recorde">View the video file will stop recording, whether to view?</string>
    <string name="prompt_lock_video">Lock selected videos?</string>
    <string name="prompt_unlock_video">Unlock selected videos?</string>
    <string name="prompt_delete_video">Delete selected videos?</string>
    <string name="prompt_delete_picture">Delete selected image?</string>
    <string name="dialog_message">Operation in progress …</string>
    <string name="normal_video">Normal</string>
    <string name="lock_video">Lock</string>
    <string name="picture">Picture</string>
    <string name="select_all">Select all</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="loading_data">Loading data…</string>
    <string name="stop_dialog_title">Tips</string>
    <string name="btn_sure">Confirm</string>
    <string name="btn_cannel">Cancel</string>
    <string name="stop_recording">Viewing the video file will stop recording. Do you want to view it?</string>
    <string name="dialog_title_stop_recording">Are you sure you want to stop recording？</string>
    <string name="dialog_message_stop_recording">During the video recording, the one button claim notification function is suspended</string>
    <string name="dialog_title_format">Format SD card</string>
    <string name="dialog_message_format_sd_card">Are you sure you want to format the SD card?</string>
    <string name="dialog_title_setting">"Enter the setting function "</string>
    <string name="dialog_message_setting_stop_recording">"The video recording function will stop and the one button claim notification function will be suspended "</string>

    <string name="please_open_record">The one button claim notification function is off, please turn on the video recording function</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="dvr_video_locking">Collision recording processing</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
</resources>