<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
<Button
    android:id="@+id/btn_back"
    android:layout_gravity="left"
    android:text="Back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/setting_btn_selector"
            android:id="@+id/recording_time_btn"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_ic_recording_time"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recording_time"
                android:textColor="#FFF"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auto_btn"
            android:background="@drawable/setting_btn_selector"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@mipmap/setting_ic_auto"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recording_auto"
                android:textColor="#FFF"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/backstage_btn"
            android:background="@drawable/setting_btn_selector"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@mipmap/setting_ic_backstage"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recording_backstage"
                android:layout_marginTop="4dp"
                android:textColor="#FFF"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/path_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_btn_selector"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_ic_path"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/saving_path"
                android:layout_marginTop="4dp"
                android:textColor="#FFF"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_fomart_btn"
            android:background="@drawable/setting_btn_selector"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@mipmap/setting_ic_format_card"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/format_card"
                android:textColor="#FFF"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restore_btn"
            android:background="@drawable/setting_btn_selector"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@mipmap/setting_ic_restore"
                android:scaleType="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/restore_default"
                android:textColor="#FFF"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
